@@ -40,10 +40,21 @@ public class PurityChecker {
     /**
      * Compute whether the given statement is side-effect-free, deterministic, or both. Returns a
      * result that can be queried.
+     *
+     * @param statement the statement to check
+     * @param annoProvider the annotation provider
+     * @param assumeSideEffectFree true if all methods should be assumed to be @SideEffectFree
+     * @param assumeDeterministic true if all methods should be assumed to be @Deterministic
+     * @return information about whether the given statement is side-effect-free, deterministic, or
+     *     both
      */
     public static PurityResult checkPurity(
-            TreePath statement, AnnotationProvider annoProvider, boolean assumeSideEffectFree) {
-        PurityCheckerHelper helper = new PurityCheckerHelper(annoProvider, assumeSideEffectFree);
+            TreePath statement,
+            AnnotationProvider annoProvider,
+            boolean assumeSideEffectFree,
+            boolean assumeDeterministic) {
+        PurityCheckerHelper helper =
+                new PurityCheckerHelper(annoProvider, assumeSideEffectFree, assumeDeterministic);
         if (statement != null) {
             helper.scan(statement, null);
         }
@@ -137,9 +148,26 @@ public class PurityChecker {
          */
         private final boolean assumeSideEffectFree;
 
-        public PurityCheckerHelper(AnnotationProvider annoProvider, boolean assumeSideEffectFree) {
+        /**
+         * True if all methods should be assumed to be @Deterministic, for the purposes of
+         * org.checkerframework.dataflow analysis.
+         */
+        private final boolean assumeDeterministic;
+
+        /**
+         * Create a PurityCheckerHelper.
+         *
+         * @param annoProvider the annotation provider
+         * @param assumeSideEffectFree true if all methods should be assumed to be @SideEffectFree
+         * @param assumeDeterministic true if all methods should be assumed to be @Deterministic
+         */
+        public PurityCheckerHelper(
+                AnnotationProvider annoProvider,
+                boolean assumeSideEffectFree,
+                boolean assumeDeterministic) {
             this.annoProvider = annoProvider;
             this.assumeSideEffectFree = assumeSideEffectFree;
+            this.assumeDeterministic = assumeDeterministic;
         }
 
         @Override
@@ -155,7 +183,7 @@ public class PurityChecker {
             if (!PurityUtils.hasPurityAnnotation(annoProvider, elt)) {
                 purityResult.addNotBothReason(node, "call.method");
             } else {
-                boolean det = PurityUtils.isDeterministic(annoProvider, elt);
+                boolean det = assumeDeterministic || PurityUtils.isDeterministic(annoProvider, elt);
                 boolean seFree =
                         (assumeSideEffectFree || PurityUtils.isSideEffectFree(annoProvider, elt));
                 if (!det && !seFree) {
@@ -207,7 +235,7 @@ public class PurityChecker {
 
             assert TreeUtils.isUseOfElement(node) : "@AssumeAssertion(nullness): tree kind";
             Element ctorElement = TreeUtils.elementFromUse(node);
-            boolean deterministic = okThrowDeterministic;
+            boolean deterministic = assumeDeterministic || okThrowDeterministic;
             boolean sideEffectFree =
                     (assumeSideEffectFree
                             || PurityUtils.isSideEffectFree(annoProvider, ctorElement));
