@@ -627,8 +627,9 @@ Unsound checking: ignore some errors
   Suppress all errors and warnings within the definition of a given class
   --- or everywhere except within the definition of a given class.  See
   Section~\ref{askipdefs}.
-\item \<-AassumeSideEffectFree>
-  Unsoundly assume that every method is side-effect-free; see
+\item \<-AassumeSideEffectFree>, \<-AassumeDeterministic>, \<-AassumePure>
+  Unsoundly assume that every method is side-effect-free, deterministic, or
+  both; see
   Section~\ref{type-refinement-purity}.
 \item \<-AassumeAssertionsAreEnabled>, \<-AassumeAssertionsAreDisabled>
   Whether to assume that assertions are enabled or disabled; see Section~\ref{type-refinement-assertions}.
